# ImKanban

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh  live_build.sh  test.sh
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt
app/assets/: generateEmbed.py
app/assets/fontawesome/: fontawesome.embed
app/src/: CMakeLists.txt  main.cpp  pch.h
app/src/App/: App.cpp  App.hpp  AppCore.cpp  AppFonts.cpp  AppInit.cpp  AppRun.cpp
app/src/App/AppSettings/: AppSettings.cpp  AppSettings.hpp
app/src/Board/: BoardView.cpp  BoardView.hpp  BoardViewCore.cpp  BoardViewDraw.cpp
app/src/Board/CardPrompt/: CardPrompt.cpp  CardPrompt.hpp
app/src/Board/Components/: FullCardView.cpp  FullCardView.hpp
app/src/Board/DeleteItemPrompt/: DeleteItemPrompt.cpp  DeleteItemPrompt.hpp
app/src/Board/ListPrompt/: ListPrompt.cpp  ListPrompt.hpp
app/src/Board/PromptBase/: PromptBase.hpp
app/src/Board/SubtaskPrompt/: SubtaskPrompt.cpp  SubtaskPrompt.hpp
app/src/Core/AppSettings/: AppSettings.cpp  AppSettings.hpp  LoadSettings.cpp
app/src/Core/ConfirmPrompt/: ConfirmPrompt.hpp
app/src/Core/EventHandler/: EventHandler.hpp
app/src/Core/PromptBase/: InputPrompt.hpp  InputWindow.hpp  PromptBase.hpp
app/src/Core/Utils/: Constants.hpp  Style.hpp  Types.hpp
app/src/Core/View/: ViewBase.hpp
app/src/Core/ViewNavigation/: ViewNavigation.hpp
app/src/Core/Widgets/: Widgets.cpp  Widgets.hpp
app/src/ImGuiDemoView/: ImGuiDemoView.cpp  ImGuiDemoView.hpp
app/src/MainView/: MainView.hpp  MainViewCore.cpp  MainViewDraw.cpp
app/src/MainView/BoardPrompt/: BoardPrompt.cpp  BoardPrompt.hpp
app/src/PromptBase/: PromptBase.hpp
app/src/SettingsView/: SettingsView.hpp  SettingsViewCore.cpp  SettingsViewDraw.cpp
app/src/View/: ViewBase.hpp
app/src/utils/: types.hpp
dependencies/: CMakeLists.txt  SFML.cmake  gtest.cmake  imgui.cmake  json.cmake
docs/: README.md
docs/html/: AppCore_8cpp.html  AppCore_8cpp__incl.dot  AppFonts_8cpp.html  AppFonts_8cpp__incl.dot  AppRun_8cpp.html  AppRun_8cpp__incl.dot  AppSettings_8cpp.html  AppSettings_8cpp__incl.dot  AppSettings_8hpp.html  AppSettings_8hpp__dep__incl.dot  AppSettings_8hpp__incl.dot  AppSettings_8hpp_source.html  App_8hpp.html  App_8hpp__dep__incl.dot  App_8hpp__incl.dot  App_8hpp_source.html  BoardList_8hpp.html  BoardList_8hpp__dep__incl.dot  BoardList_8hpp__incl.dot  BoardList_8hpp_source.html  BoardPrompt_8cpp.html  BoardPrompt_8cpp__incl.dot  BoardPrompt_8hpp.html  BoardPrompt_8hpp__dep__incl.dot  BoardPrompt_8hpp__incl.dot  BoardPrompt_8hpp_source.html  BoardTest_8cpp.html  BoardTest_8cpp__incl.dot  BoardViewCore_8cpp.html  BoardViewCore_8cpp__incl.dot  BoardViewDraw_8cpp.html  BoardViewDraw_8cpp__incl.dot  BoardView_8hpp.html  BoardView_8hpp__dep__incl.dot  BoardView_8hpp__incl.dot  BoardView_8hpp_source.html  Board_8cpp.html  Board_8cpp__incl.dot  Board_8hpp.html  Board_8hpp__dep__incl.dot  (+363 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+56 more)
lib/: CMakeLists.txt  test.cmake
lib/include/: Board.hpp  BoardList.hpp  Card.hpp  ContainerBase.hpp  JsonManager.hpp  List.hpp  Subtask.hpp  Test.hpp  api.h
lib/src/: Board.cpp  BoardList.cpp  Card.cpp  JsonManager.cpp  List.cpp  Subtask.cpp  Test.cpp
lib/test/: BoardTest.cpp  CMakeLists.txt  CardTest.cpp  ListTest.cpp  Placeholder.cpp
lib/test/integration/: CMakeLists.txt  Placeholder.cpp
lib/test/unit/: BoardTest.cpp  CMakeLists.txt  CardTest.cpp  ContainerBaseTest.cpp  ListTest.cpp  SubtaskTest.cpp
lib/test/unit/BoardList/: BoardListTest.cpp
